docs/report/versions/v0.1/01-研究目标、证据方法与版本化框架.md
# 第一部分 研究目标、证据方法与版本化框架

## 1. 报告目标、读者背景与使用方式

这份报告的目标，不是输出一份面向大众传播的“具身智能科普”，也不是简单罗列近期最热的机器人公司、模型和融资新闻，而是建立一套适合长期迭代的个人研究框架。更准确地说，本部分并不只是整份报告的“导读”，而是全书的方法论入口：它负责说明这份报告试图回答什么问题、如何处理证据、如何组织后续内容，以及为什么这份报告必须被当作一个长期版本化维护的研究项目来书写。报告默认读者已经具备控制、自动化、机器人学、深度学习和计算机视觉方面的基础，因此本报告不会把篇幅过多消耗在最初级的概念扫盲上，而会把重点放在两个层面：第一，重新梳理机器人学从经典控制、感知与规划，到学习型机器人，再到大模型驱动具身智能的技术主线；第二，在这一主线之上，系统理解当前行业中最值得长期跟踪的模型路线、工程路径、企业格局和关键争议。

更具体地说，本报告试图解决的不是“我知不知道某个热门模型的名字”，而是“我是否重新建立了一个足够稳定的认知坐标系”。如果缺少这个坐标系，那么行业中的每一次新发布都容易被误读：新论文看起来像革命性突破，但可能只是特定数据设定下的局部改进；企业演示视频看起来像通用智能，但可能建立在严格脚本化场景和大量人工准备之上；某种新术语看起来像范式变更，但本质上可能只是对旧问题的重新命名。因此，本报告要优先建设的是判断框架，而不是热点清单。

从使用方式上看，本报告更接近一份“长期研究底稿”而不是一次性交付物。它既用于快速恢复对机器人学全局结构的把握，也用于持续跟踪具身智能与机器人产业中的新论文、新产品、新企业与新判断。因此，报告的价值不仅在于当前这一版写了多少内容，更在于是否建立起一套可持续更新的目录结构、证据组织方法与判断框架。对于一个中长期学习项目而言，真正重要的并不是“首版写得有多满”，而是“后续能否低摩擦地继续增量维护”。

如果换一个更严格的说法，本报告的目标是建立一个“研究型认知操作系统”。它至少要支持四类活动：其一，快速回忆某一方向的基本概念、代表路线和历史主线；其二，在看到新论文、新模型、新公司或新政策时，能够迅速定位其属于哪一层问题、补充了哪类证据、修正了哪类旧判断；其三，在不同技术路线之间做横向比较，而不是只跟着单一叙事摆动；其四，把“我当前的判断”与“支撑这一判断的证据”明确绑定起来，便于后续版本更新时进行修订。

从阅读策略上看，本报告并不假定读者必须顺序阅读所有章节。对于希望先建立全局框架的读者，建议先读第一部分、第二部分和第三部分；对于希望直接进入技术主干的读者，可以在读完第二部分后跳转到第八部分到第十五部分；对于更关注产业趋势和公司路线的读者，则可以在掌握第二部分的定义和分析框架后，转向第二十部分之后的企业与商业化章节。也就是说，这份报告既是一条主线叙事，也应当是一套可按问题检索的参考文档。

这一定位也意味着，本报告并不打算回避“解释框架”的主观性，而是要显式管理这种主观性。报告中的判断可以带有作者视角，但必须尽量让读者看清楚：哪些是公开事实，哪些是从事实出发的推断，哪些是带有取舍标准的评价。只有这样，这份报告才适合被长期更新，而不会在版本迭代中逐渐演化成一份难以校准的印象笔记。

为了把这种“研究型认知操作系统”从口号压回执行接口，一个最小判断单元可以写成：

\[
J_i = (\text{claim}_i,\ \text{evidence}_i,\ \text{boundary}_i,\ \text{counterexample}_i,\ \text{update trigger}_i)
\]

这里 `claim` 代表当前判断，`evidence` 代表支撑证据，`boundary` 代表适用边界，`counterexample` 代表可能推翻判断的反例类型，`update trigger` 则代表未来哪类新论文、新产品或新政策会迫使本判断被回调。把每个较强结论都尽量写成这种结构的意义，在于后续版本升级时，不必整章重写，而可以精确地更新判断节点。

## 2. 研究范围与边界

从工作方法上看，范围界定还承担另一个功能：它决定研究卡片、图表和版本更新的“纳入门槛”。例如，一篇关于通用多模态模型的新论文，只有当它能够清晰映射到机器人任务理解、动作生成、系统接口、数据闭环或部署约束时，才应被吸纳进主报告；否则更适合作为旁证材料留在 `research/` 中。对一个长期维护的报告项目来说，边界并不是为了排除有趣内容，而是为了避免注意力被高噪声的新概念不断牵引。

本报告的主轴是“机器人学在大模型时代如何被重新组织”。因此，报告覆盖范围明显广于单篇技术综述，但又不会无限扩张到“所有与智能有关的话题”。在技术层面，重点覆盖机器人学基础中的运动学、动力学、规划、控制、定位与建图，学习型机器人中的模仿学习、强化学习、表示学习与 sim2real，以及大模型与具身系统交叉区域中的 VLA、世界模型、任务规划、分层架构、端侧部署、数据工程与安全验证。

在对象层面，报告既关注固定机械臂、移动平台，也关注人形、四足、无人机、服务机器人和部分可穿戴/软体系统，但重点仍会放在最能体现“感知-决策-控制-环境耦合”完整链条的系统上。纯软件智能体、与实体机器人弱耦合的通用多模态应用、或过于局部且难以代表主线的算法增量，不会作为报告主轴展开。这样做不是因为这些方向不重要，而是因为本报告的核心问题始终是“物理世界中的智能系统如何被构建、训练、部署和评估”。

本报告对“机器人”“具身智能”“智能体”“自动驾驶”等概念也会主动划定边界。机器人是一个更宽泛的上位概念，其中既包括传统工业自动化设备，也包括移动机器人、服务机器人、人形机器人和各类智能执行系统。具身智能则不是所有机器人系统的同义词，它更强调系统在开放或半开放环境中，通过感知、表示、规划、控制与环境交互形成持续闭环行为的能力。自动驾驶可视为具身系统的重要子类，但由于其任务边界、规则体系和安全约束具有显著特化，不宜直接把自动驾驶中的结论原封不动迁移到通用机器人上。纯软件智能体则可视为“高层推理和任务编排能力的参考对象”，但其不直接承担物理执行约束。

从时间范围上看，本报告既不是纯历史回顾，也不是只覆盖最近两年的“短新闻纪要”。它的结构必须同时容纳三种时间尺度：一是机器人学过去数十年的基础理论与经典工程范式；二是深度学习、强化学习和大模型对机器人路线的重组过程；三是当前持续快速变化的企业、产品与政策动态。也正因为此，报告在写法上需要同时具有教材式主线、综述式对比和行业研究式更新接口。

本节最关键的作用，是把后文所有可能发生的概念漂移提前压住。若不在一开始就明确“本报告到底研究什么、不研究什么”，那么后续章节很容易在叙事上不断滑动：一会儿把具身智能写成机器人学的新名称，一会儿把它写成大模型智能体的物理延伸，一会儿又把自动驾驶、工业自动化、家庭机器人、通用多模态交互全部揉成同一个对象。边界不清，后续章节再详尽，也会在比较和判断时不断失真。

从执行角度看，本报告对“是否纳入主线正文”的判断也可以近似写成一个过滤函数：

\[
\mathbb{I}_{\text{mainline}}(x)=
\begin{cases}
1, & x\ \text{能够映射到物理闭环、系统接口、数据闭环、部署约束或产业判断之一}\\
0, & x\ \text{主要只是热点名词、弱耦合旁证或暂不改变主线判断的噪声增量}
\end{cases}
\]

这一定义并不意味着被排除项“没有价值”，而是意味着它们更适合先沉淀在 `research/` 中，等待后续证据增强后再进入主报告。对一个长期维护项目来说，边界管理本身就是研究质量控制。

## 3. 资料来源与证据等级

如果借用 Toulmin 论证结构来理解本报告的写法，那么每个较强判断都应尽量隐含或显式包含五个部分：`claim`、`data`、`warrant`、`qualifier` 与 `rebuttal`。例如，“制造业将长期先于家庭场景成为具身智能主战场”不是一句孤立立场，而应由工业机器人存量基础、任务可结构化程度、ROI 可度量性、运维链条成熟度等 `data` 支撑；其 `warrant` 则是“在高价值、高频、可局部结构化场景中，系统部署门槛更容易被工程化消化”；同时还应加上 `qualifier`，承认这主要针对未来若干年而非永恒规律；再加入 `rebuttal`，说明一旦家用平台、端侧算力和安全验证路径出现明显突破，这一判断可能需要回调。这样写的好处是，版本更新时我们可以明确知道应该修哪一层，而不是只能整体改口径。

从实际执行角度看，证据等级还应反映到引用密度与语言强度上。对于主要建立在官方论文、项目主页与公开代码仓上的段落，可以使用更明确的判断句；对于主要来自行业访谈、媒体综述或投资观察的段落，则应更多采用“表明”“暗示”“值得跟踪”“尚待更多证据验证”等限制性表达。写作风格上的克制，不是为了保守，而是为了让后续修订成本更低。

本报告默认采取“论文与官方材料优先”的证据策略。对技术判断，优先使用论文、技术报告、项目主页、GitHub 仓库、数据集主页与 benchmark 页面；对产品与企业信息，优先使用公司官网、官方博客、开发者文档、技术发布与演示材料；对行业趋势、融资与市场判断，则将研究机构、咨询公司、券商或媒体材料视为次级证据，并明确其属性，避免与技术事实混同。

这样处理的原因在于，具身智能领域高度容易受到“演示偏差”和“叙事偏差”的影响。许多系统在演示视频中呈现出的能力，并不能直接推断为稳定、可重复、可扩展的系统能力；许多企业的公开叙事强调愿景与方向，而未必完整披露系统失效率、部署代价、数据规模、人工参与比例和任务边界。因此，在写作时必须默认对公开视频、宣传话术和二手媒体报道保持谨慎，把它们更多当作“线索”而非“结论”。

本报告将尽量区分三层内容。第一层是事实，例如某模型的输入输出形式、训练目标、实验设置、数据来源与公开结果。第二层是推断，即从多项事实出发，对技术方向、工程含义或能力边界做出的解释。第三层是评价，即在给定目标下对某条路线、某家企业或某种系统组织方式的优缺点判断。只有把这三层分开，后续版本修订时才容易知道应该更新哪些事实、哪些推断以及哪些评价。

在证据治理的思路上，本报告会借用系统综述与证据评估领域的若干基本原则，而不是把自己写成完全随意的长文。Cochrane Handbook 当前版（Version 6.5, 2024）的目录明确把“界定研究问题与范围”“制定纳入标准”“检索与筛选研究”“考虑偏差与利益冲突”“综合证据并解释结果”等步骤组织为研究工作流的一部分，这说明严肃的研究写作并不是从“先写结论”开始，而是从“先定义问题、再处理证据”开始；相关章节结构可参见 [Cochrane Handbook 当前版](https://www.cochrane.org/authors/handbooks-and-manuals/handbook/current)。

同样，Oxford CEBM 的证据等级体系（evidence levels）虽然来自医学证据评价，但其最有启发性的部分并不是具体分级表本身，而是一个更普遍的原则：不同来源的证据强弱不同，系统综述、较高质量研究、单项研究、案例与专家意见不应被同权对待。这一原则迁移到本报告时，意味着论文、官方技术文档、代码仓库、数据集主页、企业官网、演示视频和媒体报道必须被放在不同层级上使用，而不是统一写成“有来源所以都一样可信”；相关分级说明可参见 [Oxford CEBM 证据等级说明](https://www.cebm.ox.ac.uk/resources/levels-of-evidence/oxford-centre-for-evidence-based-medicine-levels-of-evidence-march-2009)。

在技术来源的优先级上，大致可以采用如下顺序：同行评审论文与权威技术报告优先于一般博客；项目主页、开源代码库与官方文档优先于二手摘要；真实实验设定、数据和 ablation 结果优先于口号化结论；跨来源一致的观察优先于单一来源的孤证。换言之，本报告不追求“每个判断都像定理一样被严格证明”，但会尽量避免把单点演示、孤立结果或未经核实的行业流言写成稳定结论。

此外，本报告虽不是 PRISMA 意义上的正式医学系统综述，但会尽量吸收其“透明报告检索、筛选与纳入逻辑”的精神。也就是说，本报告不一定为每一章都做严格的 PRISMA 流程图，但会尽量让读者看清：这一章主要基于哪类资料、哪些结论来自高强度一手材料、哪些部分仍然只是阶段性判断、哪些空白还需要后续版本补充。这种透明性对于快速变化的具身智能领域尤为重要。

如果把证据处理进一步压成一个可复用的研究动作，则更接近如下流程：

```python
for claim in chapter_claims:
    evidence = collect_primary_sources(claim)
    level = assign_evidence_level(evidence)
    boundary = write_scope_and_failure_mode(claim, evidence)
    decision = update_or_keep(claim, evidence, boundary)
```

这段伪代码的意义不在于把研究机械化，而在于提醒后续版本维护必须先更新证据、再更新判断，而不是先被行业叙事推着改口径。对快速变化的具身智能领域而言，这种顺序纪律尤其重要。

## 4. 本报告的组织结构

进一步说，这一结构还刻意把“方法论”“技术主干”“产业映射”和“作者判断”分离开来。很多行业报告把结论直接埋在技术叙述里，结果读者很难判断哪些是作者价值取向，哪些是论文本身结论。这里的分层设计试图避免这种混淆：前部章节负责给出后文判断所依赖的比较坐标，中段章节负责尽可能完整地呈现技术路线与工程约束，后段章节才系统展开企业、商业化和争议分析。这样的安排会牺牲一些“从头到尾都很顺”的流畅感，却更利于长期复核和版本维护。

从整体结构上看，本报告分为四个递进层次。第一层是导读与问题框架，用于说明报告试图回答什么问题、采用什么证据标准以及如何组织后续内容。第二层是基础层，对应第二部分到第七部分，目标是把机器人学、大模型、多模态学习与学习型机器人之间的交叉基础重新搭起来。第三层是技术层，对应第八部分到第十九部分，围绕系统分层、感知、世界模型、VLA、规划、数据、仿真、硬件、安全与开源生态展开。第四层是产业与判断层，对应第二十部分以后，转向企业分析、应用落地、资本与政策、关键争议以及长期跟踪框架。

这种结构并不是为了追求形式整齐，而是为了降低后续维护成本。对一个长期更新的研究项目而言，最重要的不是第一次把所有内容写满，而是把问题结构稳定下来，使得后续新论文、新产品、新企业与新判断都能够自然挂接到既有骨架中。只有当结构是稳定的，版本之间的增量变化才具有可比性，读者也才容易判断“哪些地方是新增事实，哪些地方是修正旧判断，哪些地方是新增的解释框架”。

基础层之所以放在前面，是因为当前具身智能的许多讨论天然带有跨学科张力。仅从大模型视角出发，容易低估实时控制、接触动力学和硬件部署的困难；仅从传统机器人学视角出发，又容易低估语言接口、多模态预训练和统一表征所带来的新变化。因此，本报告必须先把这两条历史线索重新接上，再进入技术层和产业层，否则后面的很多评价都会缺少统一坐标。

技术层是整份报告的主干。这里的重点不是机械罗列术语，而是解释各个技术模块在整套系统中的位置与分工：感知层解决什么问题，表征和世界模型层解决什么问题，VLA 路线相比经典策略学习到底新增了什么，数据工程为什么常常比模型架构更决定系统上限，仿真与评测为何既必要又常被高估，安全和治理为何不是“最后补一章”而应贯穿全链路。

产业层与判断层的作用，则是把技术主干重新映射回真实世界。许多技术路线看起来都“有道理”，但在不同本体、不同场景、不同商业模式和不同供应链条件下，实际可行性差异极大。因此，企业分析、应用落地、资本与政策，并不是技术章节的附属材料，而是验证技术判断是否具有现实约束感的重要部分。

换句话说，整份报告的结构并不是“先讲基础，再随便展开”，而是一种有意设计的认知压缩方式。基础层负责建立共同坐标，技术层负责展开真正的复杂性，产业层负责把复杂性拉回现实约束，判断层则负责把这些内容重新压缩成可长期跟踪的观察框架。若缺少这一结构，长篇报告很容易变成信息堆叠；而一旦结构稳定，后续版本更新就可以明确知道某一条新信息究竟应该进入哪一层、修订哪一类判断。

因此，本报告的目录不只是“排版结果”，而更像一个研究索引函数：新信息一旦进入视野，维护者首先要判断它属于“问题定义层”“技术主干层”“系统部署层”还是“产业判断层”，再决定它应修改事实、推断还是评价。只有目录先承担这种索引职责，正文才有机会长期保持可比性，而不是在版本迭代中不断堆叠重复内容。

## 5. 版本维护机制

与其说版本号是在管理文档，不如说是在管理判断的可追溯性。一个真正有用的 `v0.0` 不是“第一版终于写完”，而是“第一版终于建立了稳定的研究接口”。只要这一接口稳定，未来的 `v0.1`、`v0.2` 或更高版本就不必每次都从头重写，只需要沿着既有章节职责补充新证据、修正旧结论、替换图表与更新研究卡片。也正因如此，本报告后续若出现章节级重构，也应被看作研究推进中的正常现象，而不是结构失控；关键不是永远不改结构，而是每次改结构都要留下清晰的研究理由和回写路径。

`v0.0` 的目标并不是在首轮写作中穷尽所有论文、公司与技术细节，而是先建立一套长期稳定可扩展的写作骨架、章节接口、资料组织规范与判断框架。也就是说，`v0.0` 首先要解决的是“以后怎样持续更新”，其次才是“当前一次性写到多全”。这也是为什么本项目一开始就把大纲、正文、资产、研究笔记和版本目录分开组织，而不是先写出一份单体长文再回头整理。

后续版本原则上沿用同一主目录结构，在旧版本基础上增量修订。新增内容优先表现为四类：其一，补入新论文、新模型、新基准与新企业；其二，修正已经被后续证据推翻或削弱的旧判断；其三，补齐图表、代码片段、对比表和研究笔记之间的交叉引用；其四，把原本处于“暂定判断”的部分更新为更稳定的阶段性结论。版本更新不以“改得越多越好”为目标，而以“让判断框架更稳、证据链更扎实、后续维护成本更低”为目标。

这意味着版本迭代不应被理解为“不断堆新内容”。很多时候，更有价值的更新恰恰是缩窄判断边界、明确失效条件、承认某条路线并没有按照原先预期推进，或者把过去模糊的技术概念拆得更清楚。对于研究型报告而言，版本升级不仅是信息刷新，更是认知框架的持续校准。

在工程组织上，当前工作版本维护于 `docs/report/current/`，冻结版本归档到 `docs/report/versions/<version>/`。章节按《详细大纲》的“部分”逐文件拆分，每个文件内部继续沿用大纲中的正式章节编号，以确保大纲、正文、图表与后续版本可以持续一一对应。因此，`v0.0` 更准确的定位是：一份用于长期跟踪具身智能技术与产业演进的、可版本化维护的研究型总报告的首个正式工作版。

这也意味着，版本维护本身就是研究方法的一部分，而不是写作完成后的文档管理动作。采用 `current/` 与 `versions/` 的分离，不只是为了避免文件覆盖，更是为了在研究层面区分“当前工作性判断”和“某一时点冻结下来的阶段性认知”。前者允许不断修订、补证据、改表述；后者则作为时间切片，保留当时的证据状态与判断框架，供后续版本回溯与比较。对于一个需要持续跟踪快速演化行业的报告项目，这种结构比单一长文或单一版本覆盖式更新更适合长期维护。

若把版本更新写成一个最小触发流程，它更接近：

```python
if new_evidence_changes_boundary(claim) or \
   new_system_changes_interface(chapter) or \
   new_company_changes_track_panel(industry_section):
    revise_current_markdown()
    update_research_assets()
    freeze_when_scope_is_stable()
```

这说明版本维护的核心不是“定期导出新 PDF”，而是判断哪些新增证据已经足以改变正文中的接口定义、能力边界或长期跟踪字段。只有在这种意义上，版本号才真正对应研究进展，而不是文件时间戳。
